<resources>
    <string name="app_name">야놀자</string>

    <!-- Naming Rules -->
    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->

    <!-- Common -->

    <!-- Main -->
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_region_title">지역</string>
    <string name="main_btm_nav_my_near_title">내주변</string>
    <string name="main_btm_nav_like_title">찜</string>
    <string name="main_btm_nav_my_page_title">MY 야놀자</string>

    <!-- Home -->
    <string name="home_search_tv">어디로 놀러갈까요?</string>

    <!-- MyPage -->
    <string name="my_page_tv_counter">%1d 번 눌렀습니다.</string>
    <string name="my_page_btn_counting_number">숫자 세기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_page_tv_topbar">MY 야놀자</string>
    <!-- 카드 뷰(1) -->
    <string name="my_page_tv_login_info">가입하고, 초특가 혜택 받자!</string>
    <string name="my_page_tv_lets_login">로그인 및 회원가입 하기</string>
    <string name="my_page_btn_my_profit">MY 혜택</string>
    <string name="my_page_tv_point">포인트</string>
    <string name="my_page_tv_coin">야놀자 코인</string>
    <string name="my_page_coupon_disappear">소멸예정 쿠폰이 있어요!</string>
    <string name="my_page_tv_after_login">계정연동 후 사용하세요</string>
    <string name="my_page_tv_coupon">쿠폰</string>
    <string name="my_page_tv_my_review">나의 후기</string>
    <string name="my_page_tv_like">찜</string>
    <string name="my_page_my_info_setting">내정보 관리</string>
    <!--예약 내역-->
    <string name="my_page_tv_book_list_logout">비회원 예약 내역</string>
    <string name="my_page_tv_book_list_login">예약 내역</string>
    <string name="my_page_tv_korea_all_book">국내여행 통합예약 (6/9 이전 예약)</string>
    <string name="my_page_tv_korea_room_book">국내 숙소 (6/9 이전 예약)</string>
    <string name="my_page_tv_korea_leisure_book">국내 레저/모바일 교환권 (6/9 이전 예약)</string>
    <string name="my_page_tv_ktx_book">KTX (6/9 이전 예약)</string>
    <string name="my_page_tv_restaurant_book">맛집</string>
    <string name="my_page_tv_aboard_book">해외 예약 내역</string>
    <string name="my_page_tv_aboard_insurance">해외 여행자 보험</string>
    <!-- 이벤트 리스트 -->
    <string name="my_page_event_list_one">이벤트</string>
    <string name="my_page_event_list_two">기획전</string>
    <string name="my_page_event_list_three">리서치 참여</string>
    <string name="my_page_event_list_four">당첨자 발표</string>
    <!-- 하단 cl -->
    <string name="my_page_yanolza">믿고 쓰는 야놀자!</string>
    <string name="my_page_customer">고객센터</string>
    <string name="my_page_customer_time">365일 오전 9시 ~ 익일 오전 3시 운영</string>
    <string name="my_page_kakao">카카오톡 1:1 문의</string>
    <string name="my_page_connect">상담원 연결</string>
    <string name="my_page_FAQ">자주 묻는 질문 FAQ</string>
    <string name="my_page_yanolza_info">야놀자 정보</string>
    <string name="my_page_notice">공지사항</string>
    <string name="my_page_setting">설정</string>
    <!-- 로그인 -->
    <string name="login_topbar_tv_login">로그인</string>
    <string name="login_tv_login">야놀자 로그인</string>
    <string name="login_tv_easy_login">간편 로그인</string>
    <string name="login_id">아이디 또는 이메일</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_find_pw">비밀번호 찾기</string>
    <string name="login_register">야놀자 회원가입</string>
    <!--소셜로그인 tab-->
    <string name="social_phone">휴대폰 번호로 로그인</string>
    <string name="social_kakao">카카오 로그인</string>
    <string name="social_naver">네이버 로그인</string>
    <string name="logout">로그아웃</string>

    <!-- 설정 -->
    <string name="setting_app_lock">암호잠금</string>
    <string name="setting_notion">알림 설정</string>
    <string name="setting_personal_info">개인정보 권한설정</string>
    <string name="setting_license">오픈소스 라이선스</string>

    <!--회원가입-->
    <string name="email">이메일</string>
    <string name="pw">비밀번호</string>
    <string name="pwConfirm">비밀번호 확인</string>
    <string name="pwInfo">영문+숫자+특수문자 8~20자리</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="register_one">회원가입 (1/2)</string>
    <string name="register_two">회원가입 (2/2)</string>
    <string name="next">다음</string>
    <string name="agreeTitle">약관 동의</string>
    <string name="agreeAll">전체 동의</string>
    <string name="agreeAllIncludeChoice">(선택 포함)</string>
    <string name="agree_condition_two"><u>위치 정보 이용 약관 동의</u></string>
    <string name="agree_condition_three"><u>개인정보 수집 및 이용 동의</u></string>
    <string name="register_done">회원가입 완료</string>
    <string name="certify_num_again">인증번호 재전송(남은 횟수 3회)</string>
    <string name="certify_six_num">인증번호 6자리</string>
    <string name="pw_helper">영문+숫자+특수문자 8~20자리</string>
    <string name="pw_helper_error">공백을 제외한 영문+숫자+특수문자 8~20자 조합으로 설정해주세요</string>
    <string name="pw_confirm_helper_error">동일한 비밀번호를 입력해주세요</string>
    <string name="phone_num_send">인증번호가 발송되었습니다.</string>
    <string name="logoutAlert">로그아웃 하시겠습니까?</string>

    <!--이용약관-->
    <string name="yanolza_law_one">(주)야놀자는 통신판매중개자로서 통신판매의 당사자가 아니며 상품의 예약,이용 및 환불 등과
        관련한 의무와 책임은 각 판매자에게 있습니다.</string>

    <string name="yanolza_law_two">(주)야놀자가 소유/운영/관리하는 웹사이트 및 앱 내의 상품/판매자/이벤트 정보,디자인
        및 화면의 구성, UI를 포함하여 일체의 콘텐츠에 대한 무단 복제,배포,방송 또는 전송,스크래핑 등의 행위는
        저작권법 및 콘텐츠산업 진흥법 등 관련 법령에 의하여 엄격히 금지 됩니다.</string>

    <string name="yanolza_law_three">객실사진의 경우 객실별 대표사진으로 실제 배정받는 객실과 상이할 수 있습니다.</string>

    <string name="yanolza_law_four">숙박업소는 법적으로 청소년 고용과 혼숙이 금지되어 있습니다. 따라서 청소년
    혼숙으로 인한 입실거부는 정당하며, 이에 대한 법적 제재는 이용 당사자가 책임져야
    합니다.</string>

    <string name="book_law">입력하신 번호는 안심번호로 변경되어 숙소에 전달됩니다. 단, 안심번호로 처리가
    가 어려운 경우에 한해 제한적으로 개인저보 제공 동의에 근거하야 실제 휴대폰
    번호가 전달 될 수 있습니다.</string>

    <string name="pay_info">은행 점검시간인 23:00~00:30 까지 이용 불가한 계좌이체 결제수단이
    포함되어 잇습니다.</string>

    <!--국내숙소 -->
    <string name="motel">모텔</string>
    <string name="hotel">호텔</string>
    <string name="premium_hotel">프리미엄호텔</string>
    <string name="pension">펜션</string>
    <string name="resort">리조트</string>
    <string name="pool_vila">풀빌라</string>
    <string name="camping">글램핑/캠핑</string>
    <string name="hanok">게하/한옥</string>
    <string name="hokangs">호캉스패키지</string>
    <string name="earlybird">얼리버드특가</string>
    <string name="brand">부티크브랜드</string>
    <string name="self_check_in">셀프체크인</string>
    <string name="motel_again">모텔의재발견</string>
    <string name="poolroom">수영장숙소</string>
    <string name="themepension">테마펜션</string>
    <string name="gungbok">경상북도</string>
    <string name="jejudo">제주도</string>
    <string name="busan">부산</string>
    <string name="gangwon">강원도</string>
    <string name="see_more">더보기</string>

</resources>