<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:icon="@drawable/ic_btm_navi_home"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_home_title" />
    <item
        android:id="@+id/menu_main_btm_nav_region"
        android:icon="@drawable/ic_btm_navi_region"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_region_title" />
    <item
        android:id="@+id/menu_main_btm_nav_my_near"
        android:icon="@drawable/ic_btm_navi_my_near"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_my_near_title" />
    <item
        android:id="@+id/menu_main_btm_nav_like"
        android:icon="@drawable/ic_btm_navi_like"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_like_title" />

    <item
        android:id="@+id/menu_main_btm_nav_my_page"
        android:icon="@drawable/ic_btm_navi_profile"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_my_page_title" />

</menu>
