<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/logout_tv_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/logoutAlert"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/logout_btn_confirm"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/logout_tv_text"
            app:layout_constraintTop_toBottomOf="@id/logout_tv_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout_btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:text="@string/confirm"
            android:textColor="@color/myPageBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/logout_tv_text"
            app:layout_constraintStart_toEndOf="@id/logout_btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/logout_tv_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>