<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".src.main.login.LoginActivity">

    <!-- 상단 바 -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/login_tb_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:elevation="0dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_tab_cl"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="72dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/login_ibtn_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_login_back_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_topbar_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/apple_sd_gothic_neo"
                android:paddingBottom="5dp"
                android:text="@string/login_topbar_tv_login"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/login_ibtn_back"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/login_tab_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:tabIndicatorHeight="1.2dp"
        app:tabIndicatorColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_tb_layout">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tv_login" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tv_easy_login" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/login_frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/stroke_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_tab_layout">
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>