<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppBottomSheetDialogTheme"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:background="@drawable/dialog_btm_agree"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_addCate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/agree_closeBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_btn_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/agree_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:text="@string/agreeTitle"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/agree_closeBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/agree_relativeLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bg_social_login_select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/agree_closeBtn"
            app:layout_constraintTop_toBottomOf="@id/agree_tv">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/agree_all_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />
            <TextView
                android:id="@+id/agree_all_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/agree_all_check"
                android:text="@string/agreeAll"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/agree_all_select_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text = "@string/agreeAllIncludeChoice"
                android:layout_toEndOf="@id/agree_all_tv"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/agree_ll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/agree_nextBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/agree_closeBtn"
            app:layout_constraintTop_toBottomOf="@id/agree_relativeLayout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/agree_check_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_agree_check" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/agree_check_iv"
                    android:text="만 14세 이상 이용,서비스 이용약관,개인정보\n수집 및 이용동의" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/agree_check_iv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_agree_check" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/agree_check_iv2"
                    android:text="@string/agree_condition_two" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/agree_check_iv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_agree_check" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/agree_check_iv3"
                    android:text="@string/agree_condition_three" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/agree_check_iv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_agree_check" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/agree_check_iv4"
                    android:text="장기 미접속 시에도 계정 유지" />
            </RelativeLayout>
        </LinearLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/agree_nextBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_login_login"
            android:text="다음"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/agree_ll"
            app:layout_constraintEnd_toEndOf="@+id/agree_relativeLayout"
            app:layout_constraintStart_toStartOf="@+id/agree_relativeLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>